--- a/edit-profile.html
+++ b/edit-profile.html
@@ -154,7 +154,7 @@
       };
       saveProfile(newProfile);
       alert("Profile saved! Returning to profile page.");
-      window.location.href = "profile.html";
+      window.location.href = "index.html";
     });
 
 
