--- a/edit-profile.html
+++ b/edit-profile.html
@@ -26,6 +26,10 @@
       max-width: 600px;
       margin-left: auto;
       margin-right: auto;
+      box-sizing: border-box;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
     label {
       display: block;
@@ -43,6 +47,7 @@
       color: var(--text-color);
       resize: vertical;
       transition: background-color 0.3s, color 0.3s;
+      box-sizing: border-box;
     }
     textarea {
       min-height: 80px;
@@ -57,6 +62,9 @@
       border-radius: 8px;
       cursor: pointer;
       font-size: 16px;
+      width: 100%;
+      max-width: 100%;
+      box-sizing: border-box;
     }
     .dark-toggle {
       position: fixed;
@@ -65,11 +73,18 @@
       padding: 8px 12px;
       background: #444;
       color: white;
-      font-size: 12px;
+      font-size: 14px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
       z-index: 1000;
+      width: auto;
+      min-width: 40px;
+      height: 36px;
+      line-height: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .back-link {
       display: inline-block;
@@ -77,6 +92,26 @@
       color: var(--primary-color);
       text-decoration: none;
       font-weight: 600;
+    }
+    .avatar-preview {
+      margin-top: 10px;
+      max-width: 150px;
+      max-height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid var(--primary-color);
+      display: block;
+    }
+
+
+    @media (max-width: 640px) {
+      body {
+        padding: 15px 10px;
+      }
+      button {
+        font-size: 14px;
+        padding: 10px;
+      }
     }
   </style>
 </head>
@@ -93,7 +128,12 @@
     <input type="text" id="role" name="role" required />
 
     <label for="avatar">Avatar Image URL</label>
-    <input type="text" id="avatar" name="avatar" required />
+    <input type="text" id="avatar" name="avatar" placeholder="Or upload image below" />
+
+    <label for="avatarUpload">Upload Avatar Image</label>
+    <input type="file" id="avatarUpload" accept="image/*" />
+
+    <img id="avatarPreview" class="avatar-preview" src="" alt="Avatar Preview" />
 
     <label for="about">About</label>
     <textarea id="about" name="about" required></textarea>
@@ -107,11 +147,13 @@
     <button type="submit">Save Profile</button>
   </form>
 
-  <a href="profile.html" class="back-link">← Back to Profile</a>
+  <a href="index.html" class="back-link">← Back to Profile</a>
 
   <script>
     const form = document.getElementById("editForm");
-
+    const avatarInput = document.getElementById("avatar");
+    const avatarUpload = document.getElementById("avatarUpload");
+    const avatarPreview = document.getElementById("avatarPreview");
 
     const defaultProfile = {
       name: "Shree Bhargav",
@@ -140,7 +182,19 @@
       form.about.value = p.about;
       form.skills.value = p.skills.join(", ");
       form.projects.value = p.projects.join(", ");
+      avatarPreview.src = p.avatar || "";
     }
+
+    avatarUpload.addEventListener("change", e => {
+      const file = e.target.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = function(event) {
+        avatarPreview.src = event.target.result;
+        avatarInput.value = event.target.result; 
+      };
+      reader.readAsDataURL(file);
+    });
 
     form.addEventListener("submit", e => {
       e.preventDefault();
@@ -156,7 +210,6 @@
       alert("Profile saved! Returning to profile page.");
       window.location.href = "index.html";
     });
-
 
     function toggleDarkMode() {
       document.body.classList.toggle("dark");
