--- a/edit-profile.html
+++ b/edit-profile.html
@@ -158,7 +158,7 @@
     const defaultProfile = {
       name: "Shree Bhargav",
       role: "Android Developer | Team Lead",
-      avatar: "https://i.pravatar.cc/150?img=5",
+      avatar: "IMG_2892.JPG",
       about: "Hello! I’m Shree, a passionate Android developer with over 2 years of experience leading mobile teams, delivering high-performance apps, and mentoring junior developers.",
       skills: ["Kotlin", "Jetpack Compose", "Java", "SQL", "Firebase", "Leadership"],
       projects: ["PozoApp – Invoice & Payment Manager", "SmartSales – Product & Order Management", "Learnify – E-learning app (personal project)"]
@@ -191,7 +191,7 @@
       const reader = new FileReader();
       reader.onload = function(event) {
         avatarPreview.src = event.target.result;
-        avatarInput.value = event.target.result; // set the data URL in avatar input
+        avatarInput.value = event.target.result; 
       };
       reader.readAsDataURL(file);
     });
