--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <script>
 
 const defaultProfile = {
-      name: "Shree Bhargav",
+      name: "Shree Bhargav R K",
       role: "Android Developer | Team Lead",
       avatar: " IMG_2892.JPG",  
       about: "Hello! I’m Shree, a passionate Android developer with over 2 years of experience leading mobile teams, delivering high-performance apps, and mentoring junior developers.",
